--- a/Contents/docker-compose.yml
+++ b/Contents/docker-compose.yml
@@ -2,30 +2,35 @@ version: "3"
 services:
 
   front:
+    restart: always
     build:
       context: .
       dockerfile: ./front/build/Dockerfile
     ports:
       - 5005:8000
+    working_dir: '/root/src'
     volumes:
-      - .:/front
+      - ${FRONT_PATH}:/root/src
 
     command: gunicorn flask_app:app
 
   backend:
+    restart: always
     build:
       context: .
       dockerfile: ./backend/build/Dockerfile
     ports:
       - 5006:9000
+    working_dir: '/root/src'
     volumes:
-      - .:/backend
+      - ${BACKEND_PATH}:/root/src
 
     command: gunicorn flask_app:app
 
   db:
     image: mysql:8
     container_name: mysql
+    # command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --log_warnings=1
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -38,6 +43,7 @@ services:
     volumes:
         - db-store:/var/lib
         - ./mysql/conf/my.cnf:/etc/mysql/conf.d/my.cnf
+        - ./mysql/db:/docker-entrypoint-initdb.d
 
 volumes:
   db-store:
