--- a/Contents/docker-compose.yml
+++ b/Contents/docker-compose.yml
@@ -42,8 +42,8 @@ services:
         - 3306:3306
     volumes:
         - db-store:/var/lib
-        - ./mysql/conf/my.cnf:/etc/mysql/conf.d/my.cnf
-        - ./mysql/db:/docker-entrypoint-initdb.d
+        - ./db/conf/my.cnf:/etc/mysql/conf.d/my.cnf
+        - ./db/query:/docker-entrypoint-initdb.d 
 
 volumes:
   db-store:
