必要なページのひな型を作成

--- a/Contents/.env
+++ b/Contents/.env
@@ -1,2 +1,8 @@
 FRONT_PATH=./front
+FRONT_MODULE_PATH=./front/module
 BACKEND_PATH=./backend
+
+DB_ROOT_PASS="root"
+DB_DATABASE="cardsdb"
+DB_USER="user"
+DB_PASS="iwashi184"
