--- a/Contents/.env
+++ b/Contents/.env
@@ -1,5 +1,5 @@
 FRONT_PATH=./front
-FRONT_MODULE_PATH=./front/module
+FRONT_MODULES_PATH=./front/modules
 BACKEND_PATH=./backend
 
 DB_ROOT_PASS="root"
