--- a/Contents/docker-compose.yml
+++ b/Contents/docker-compose.yml
@@ -4,28 +4,23 @@ services:
   front:
     restart: always
     build:
-      context: .
-      dockerfile: ./front/build/Dockerfile
+      context: ${FRONT_PATH}
+      dockerfile: ./Dockerfile
     ports:
       - 5005:5005
-    working_dir: '/root/src'
     volumes:
       - ${FRONT_PATH}:/root/src
 
-    command: gunicorn large_category_page:app
 
   backend:
     restart: always
     build:
-      context: .
-      dockerfile: ./backend/build/Dockerfile
+      context: ${BACKEND_PATH}
+      dockerfile: ./Dockerfile
     ports:
       - 5006:5006
-    working_dir: '/root/src'
     volumes:
       - ${BACKEND_PATH}:/root/src
-
-    command: gunicorn large_category_page:app
 
   db:
     image: mysql:8
@@ -41,8 +36,11 @@ services:
         - 3306:3306
     volumes:
         - db-store:/var/lib
-        - ./db/conf/my.cnf:/etc/mysql/conf.d/my.cnf
         - ./db/query:/docker-entrypoint-initdb.d 
+    command:
+      - mysqld
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
 
 volumes:
   db-store:
