--- a/Contents/front/Dockerfile
+++ b/Contents/front/Dockerfile
@@ -1,15 +1,15 @@
 FROM python:3.9.7-slim-buster
-FROM python:3.7-alpine
 
 USER root
 WORKDIR /root/src
 
 ENV FLASK_APP=app.py
-RUN apk add --no-cache gcc musl-dev linux-headers
-
-RUN pip install --upgrade pip
+RUN pip3 install --upgrade pip
 COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip3 install numpy
+RUN pip3 install --no-cache-dir pandas --no-build-isolation
+RUN pip3 install --upgrade pip setuptools wheel
+RUN pip3 install -r requirements.txt
  
 COPY . .
 
